# tkacheva_oop_qt

tkacheva_oop_qt/: CMakeLists.txt  boost.h  header.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywidget.cpp  mywidget.h  tkacheva_group.cpp  tkacheva_group.h  tkacheva_headman.cpp  tkacheva_headman.h  tkacheva_student.cpp  tkacheva_student.h
